bat.bool1.parottrouble.ParotTrouble.scala.error
Erreur de compilation :
ParotTrouble:10: error: Unmatched closing brace '}' ignored here
}
^